--- a/index.html
+++ b/index.html
@@ -6,37 +6,65 @@
   <title>Střechy Pustelník</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <style>
-    body {
-      background: linear-gradient(to bottom right, #e0eafc, #cfdef3);
-    }
-    .hero {
-      background: url('https://source.unsplash.com/1600x600/?roof,construction') no-repeat center center;
-      background-size: cover;
-      height: 60vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
-    }
-    .section-title {
-      margin-top: 2rem;
-      margin-bottom: 1rem;
-    }
-    footer {
-      background-color: #343a40;
-      color: white;
-      padding: 1rem 0;
-      text-align: center;
-    }
-    #map {
-      height: 300px;
-      width: 100%;
-      border-radius: 10px;
-      margin-top: 1rem;
-    }
-  </style>
+ <style>
+  body {
+    background: linear-gradient(to bottom right, #e0eafc, #cfdef3);
+    font-family: 'Segoe UI', sans-serif;
+    font-weight: 600;
+    font-size: 1.05rem;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    font-weight: 700;
+  }
+  .hero {
+  background: url('https://source.unsplash.com/1600x600/?roof,construction') no-repeat center center;
+  background-size: cover;
+  height: 60vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  text-align: center;
+  position: relative;
+}
+
+.hero h1 {
+  font-size: 3.2rem;
+  font-weight: 800;
+  padding: 1rem 2rem;
+
+  border-radius: 10px;
+  text-shadow: 3px 3px 8px rgba(0,0,0,0.8);
+}
+
+  .section-title {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+  }
+  .card-title {
+    font-weight: 700;
+  }
+  .card-text {
+    font-weight: 600;
+  }
+  footer {
+    background-color: #343a40;
+    color: white;
+    padding: 1rem 0;
+    text-align: center;
+    font-weight: 600;
+  }
+  #map {
+    height: 300px;
+    width: 100%;
+    border-radius: 10px;
+    margin-top: 1rem;
+  }
+  .nav-link {
+    font-weight: 600;
+  }
+</style>
+
 </head>
 <body>
 
@@ -57,7 +85,7 @@
   </nav>
 
   <header class="hero">
-    <h1 class="display-4">STŘECHY Pustelník, s.r.o., Kobeřice</h1>
+    <h1 class="display-4">STŘECHY Pustelník, s.r.o.</h1>
   </header>
 
   <main class="container">
