--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <section id="kontakt" class="my-5">
       <h2 class="section-title">Kontakt</h2>
       <p><strong>Telefon:</strong> +420 774 491 064</p>
-      <p><strong>Email:</strong> info@strechy-pustelnik.cz</p>
+      <p><strong>Email:</strong> strechypustelnik@gmail.com</p>
       <p><strong>Adresa:</strong> Dubová 852, 747 27 Kobeřice</p>
       <div id="map"></div>
     </section>
