--- a/index.html
+++ b/index.html
@@ -1,77 +1,103 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Střechy Pustelník</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
- <style>
-  body {
-    background: linear-gradient(to bottom right, #e0eafc, #cfdef3);
-    font-family: 'Segoe UI', sans-serif;
-    font-weight: 600;
-    font-size: 1.05rem;
-  }
-  h1, h2, h3, h4, h5, h6 {
-    font-weight: 700;
-  }
-  .hero {
-  background: url('https://source.unsplash.com/1600x600/?roof,construction') no-repeat center center;
-  background-size: cover;
-  height: 60vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  text-align: center;
-  position: relative;
-}
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  />
+  <!-- Bootstrap Icons -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    rel="stylesheet"
+  />
+  <style>
+    body {
+      background: linear-gradient(to bottom right, #e0eafc, #cfdef3);
+      font-family: "Segoe UI", sans-serif;
+      font-weight: 600;
+      font-size: 1.05rem;
+    }
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      font-weight: 700;
+    }
+    .hero {
+      background: url("https://source.unsplash.com/1600x600/?roof,construction")
+        no-repeat center center;
+      background-size: cover;
+      height: 60vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      text-align: center;
+      position: relative;
+    }
 
-.hero h1 {
-  font-size: 3.2rem;
-  font-weight: 800;
-  padding: 1rem 2rem;
+    .hero h1 {
+      font-size: 3.2rem;
+      font-weight: 800;
+      padding: 1rem 2rem;
+      border-radius: 10px;
+      text-shadow: 3px 3px 8px rgba(0, 0, 0, 0.8);
+    }
 
-  border-radius: 10px;
-  text-shadow: 3px 3px 8px rgba(0,0,0,0.8);
-}
-
-  .section-title {
-    margin-top: 2rem;
-    margin-bottom: 1rem;
-  }
-  .card-title {
-    font-weight: 700;
-  }
-  .card-text {
-    font-weight: 600;
-  }
-  footer {
-    background-color: #343a40;
-    color: white;
-    padding: 1rem 0;
-    text-align: center;
-    font-weight: 600;
-  }
-  #map {
-    height: 300px;
-    width: 100%;
-    border-radius: 10px;
-    margin-top: 1rem;
-  }
-  .nav-link {
-    font-weight: 600;
-  }
-</style>
-
+    .section-title {
+      margin-top: 2rem;
+      margin-bottom: 1rem;
+    }
+    .card-title {
+      font-weight: 700;
+    }
+    .card-text {
+      font-weight: 600;
+    }
+    footer {
+      background-color: #343a40;
+      color: white;
+      padding: 1rem 0;
+      text-align: center;
+      font-weight: 600;
+    }
+    #map {
+      height: 300px;
+      width: 100%;
+      border-radius: 10px;
+      margin-top: 1rem;
+    }
+    .nav-link {
+      font-weight: 600;
+    }
+    /* Ikony u kontaktu trochu odsazené */
+    #kontakt p i {
+      color: #0d6efd; /* modrá bootstrap barva */
+      margin-right: 8px;
+      font-size: 1.2rem;
+      vertical-align: middle;
+    }
+  </style>
 </head>
 <body>
-
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="#">Střechy Pustelník</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+      >
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -92,7 +118,11 @@
     <section id="o-nas">
       <h2 class="section-title">O nás</h2>
       <p>
-        Firma STŘECHY Pustelník, s.r.o. byla založena v roce 2012. Jsme profesionální a zkušená společnost nabízející realizace a rekonstrukce střech na klíč. Provádíme šikmé i ploché střechy, klempířské práce, ale taktéž hydroizolace střech. Máme veškeré technické vybavení a techniku. Pracujeme dle platných norem, kvalitně, precizně a zodpovědně.
+        Firma STŘECHY Pustelník, s.r.o. byla založena v roce 2012. Jsme
+        profesionální a zkušená společnost nabízející realizace a rekonstrukce
+        střech na klíč. Provádíme šikmé i ploché střechy, klempířské práce, ale
+        taktéž hydroizolace střech. Máme veškeré technické vybavení a techniku.
+        Pracujeme dle platných norem, kvalitně, precizně a zodpovědně.
       </p>
     </section>
 
@@ -103,7 +133,10 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Pokrývačské práce</h5>
-              <p class="card-text">Kompletní pokládka nových střech včetně zateplení, hydroizolace plochých střech  a montáže okapů.</p>
+              <p class="card-text">
+                Kompletní pokládka nových střech včetně zateplení, hydroizolace
+                plochých střech a montáže okapů.
+              </p>
             </div>
           </div>
         </div>
@@ -111,7 +144,10 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Opravy a rekonstrukce</h5>
-              <p class="card-text">Rychlé a kvalitní opravy poškozených střech, výměna střešní krytiny.</p>
+              <p class="card-text">
+                Rychlé a kvalitní opravy poškozených střech, výměna střešní
+                krytiny.
+              </p>
             </div>
           </div>
         </div>
@@ -119,7 +155,9 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Klempířské práce</h5>
-              <p class="card-text">Výroba a montáž klempířských prvků na míru dle požadavků zákazníka.</p>
+              <p class="card-text">
+                Výroba a montáž klempířských prvků na míru dle požadavků zákazníka.
+              </p>
             </div>
           </div>
         </div>
@@ -128,12 +166,20 @@
 
     <section id="kontakt" class="my-5">
       <h2 class="section-title">Kontakt</h2>
-      <p><strong>Telefon:</strong> +420 774 491 064</p>
-      <p><strong>Email:</strong> strechypustelnik@gmail.com</p>
-      <p><strong>Adresa:</strong> Dubová 852, 747 27 Kobeřice</p>
+      <p>
+        <i class="bi bi-telephone-fill"></i><strong>Telefon:</strong>
+        +420 774 491 064
+      </p>
+      <p>
+        <i class="bi bi-envelope-fill"></i><strong>Email:</strong>
+        strechypustelnik@gmail.com
+      </p>
+      <p>
+        <i class="bi bi-geo-alt-fill"></i><strong>Adresa:</strong> Dubová 852, 747
+        27 Kobeřice
+      </p>
       <div id="map"></div>
     </section>
-
   </main>
 
   <footer>
@@ -144,19 +190,21 @@
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
     function loadmap(lat, lon, popup) {
-      var map = L.map('map').setView([lat, lon], 17);
+      var map = L.map("map").setView([lat, lon], 17);
 
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors'
+      L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+        attribution:
+          '&copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors',
       }).addTo(map);
 
-      L.marker([lat, lon]).addTo(map)
+      L.marker([lat, lon])
+        .addTo(map)
         .bindPopup(popup)
         .openPopup();
     }
 
     // Načti mapu s přesnou adresou Dubová 852, 747 27 Kobeřice
-    loadmap(49.9906, 18.0629, 'Střechy Pustelník<br>Dubová 852, Kobeřice');
+    loadmap(49.9906, 18.0629, "Střechy Pustelník<br>Dubová 852, Kobeřice");
   </script>
 </body>
 </html>
