--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <style>
     body {
-      background: linear-gradient(to bottom right, #e0eafc, #cfdef3);
+      background-color: #f5f5f5;
       font-family: 'Segoe UI', sans-serif;
       font-weight: 600;
       font-size: 1.05rem;
