--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <style>
     body {
-      background-color: #f5f5f5;
+      background-color: #f5f5f5; /* světlá téměř bílá */
       font-family: 'Segoe UI', sans-serif;
       font-weight: 600;
       font-size: 1.05rem;
