--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     }
 
     .hero {
-      background: url('https://images.unsplash.com/photo-1602193230480-7840a38eb0c3?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center fixed;
+      background:url('strecha.jpg') no-repeat center center fixed;
       background-size: cover;
       height: 60vh;
       display: flex;
